--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 html {
   box-sizing: border-box;
+  font-size: 0.875rem;
 }
 
 *,
@@ -14,19 +15,32 @@ html {
 }
 
 body {
-  font-family: 'Macondo', cursive;
-  font-weight: 400;
-  font-style: normal;
-  width: 100vw;
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background: url('/assets/images/ChatGPT\ Image\ Mar\ 31\,\ 2025\,\ 10_07_51\ AM.png')
+    center/cover no-repeat;
+  text-align: center;
+  color: #fff;
+  box-shadow: inset 0 0 6rem #222;
+  font-family: 'Macondo', cursive;
+  font-weight: 400;
+  font-style: normal;
 }
 
 input,
 button {
   font-family: inherit;
+}
+
+main {
+  margin: 0 1rem;
+}
+
+h1 {
+  text-shadow: 0 0 0.25rem;
 }
 
 #hero-form > * {
@@ -36,6 +50,9 @@ button {
 #hero-form fieldset {
   padding: 1rem;
   border-radius: 0.25rem;
+  border: 1px solid #fff;
+  text-align: center;
+  font-size: 1.125rem;
 }
 
 #hero-form fieldset label {
@@ -50,15 +67,37 @@ button {
   display: block;
   width: 100%;
   min-width: 0;
-  margin-top: 0.5rem;
+  margin-top: 0.75rem;
+  padding: 0.75rem;
   text-align: center;
+  font-size: inherit;
+  color: inherit;
+  background: none;
+  border: none;
+  border-bottom: 1px solid #fff;
+}
+
+#hero-form fieldset input:focus {
+  box-shadow: 0 0 0.25rem #fff, inset 0 0 0.25rem #fff;
 }
 
 #hero-form button[type='submit'] {
   width: 100%;
-  padding: 0.25rem;
-  font-size: large;
+  padding: 1rem;
+  color: goldenrod;
+  font-size: 1.75rem;
   cursor: pointer;
+  background: red;
+  border: none;
+  border-radius: 0.25rem;
+  text-shadow: inset 1px 1px 0.1rem #222;
+  transition: text-shadow 0.4s ease-in-out;
+}
+
+#hero-form button[type='submit']:hover {
+  box-shadow: 0 0 0.25rem red;
+  color: gold;
+  text-shadow: 0 0 0.5rem gold;
 }
 
 #modal {
@@ -68,7 +107,7 @@ button {
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(34, 34, 34, 0.5);
 }
 
 #modal.visible {
@@ -79,12 +118,16 @@ button {
 
 #modal > #modal-content {
   position: absolute;
-  width: 50vw;
-  height: 50vh;
+  width: 75vw;
+  height: 75vh;
   padding: 1rem;
   border-radius: 0.25rem;
   text-align: center;
-  background: white;
+  font-size: large;
+  background: url('/assets/images/ChatGPT\ Image\ Mar\ 31\,\ 2025\,\ 11_50_29\ AM.png')
+    center/cover no-repeat;
+  box-shadow: inset 0 0 6rem #222, 0 0 1rem #222;
+  color: goldenrod;
 }
 
 #modal > #modal-content > .centered-content {
@@ -96,6 +139,18 @@ button {
 
 #modal > #modal-content .display-text {
   display: block;
-  margin: 1rem auto;
-  font-size: 2rem;
+  margin: 2rem auto;
+  font-size: xx-large;
+  color: gold;
+  text-shadow: 0 0 0.25rem gold;
+}
+
+@media screen and (min-width: 640px) {
+  html {
+    font-size: 1rem;
+  }
+
+  main {
+    margin: 0;
+  }
 }
