Style: Add main-btn class

--- a/style.css
+++ b/style.css
@@ -35,6 +35,27 @@ button {
   font-family: inherit;
 }
 
+.main-btn {
+  width: 100%;
+  padding: 1rem;
+  color: gold;
+  font-size: 1.75rem;
+  cursor: pointer;
+  background: #cc0002;
+  border: none;
+  border-radius: 0.25rem;
+  text-shadow: inset 1px 1px 0.1rem #222;
+  box-shadow: inset 2px 2px 8px #f6957d, inset -2px -2px 8px #641609;
+}
+
+.main-btn:hover {
+  text-shadow: 0 0 1rem gold;
+}
+
+.main-btn:active {
+  box-shadow: inset 2px 2px 8px #641609, inset -2px -2px 8px #f6957d;
+}
+
 main {
   margin: 0 1rem;
 }
@@ -79,25 +100,6 @@ h1 {
 
 #hero-form fieldset input:focus {
   box-shadow: 0 0 0.25rem #fff, inset 0 0 0.25rem #fff;
-}
-
-#hero-form button[type='submit'] {
-  width: 100%;
-  padding: 1rem;
-  color: goldenrod;
-  font-size: 1.75rem;
-  cursor: pointer;
-  background: red;
-  border: none;
-  border-radius: 0.25rem;
-  text-shadow: inset 1px 1px 0.1rem #222;
-  transition: text-shadow 0.4s ease-in-out;
-}
-
-#hero-form button[type='submit']:hover {
-  box-shadow: 0 0 0.25rem red;
-  color: gold;
-  text-shadow: 0 0 0.5rem gold;
 }
 
 #modal {
