--- a/style.css
+++ b/style.css
@@ -36,27 +36,36 @@ button {
 }
 
 .main-btn {
+  position: relative;
   width: 100%;
-  padding: 1rem;
-  color: gold;
+  border: none;
+  background: none;
   font-size: 1.75rem;
   cursor: pointer;
-  background: #cc0002;
-  border: none;
-  border-radius: 0.25rem;
-  text-shadow: inset 1px 1px 0.1rem #222;
-  box-shadow: inset 2px 2px 8px #f6957d, inset -2px -2px 8px #641609;
 }
 
-.main-btn:hover {
-  text-shadow: 0 0 1rem gold;
+.main-btn img {
+  max-width: 100%;
 }
 
-.main-btn:active {
-  box-shadow: inset 2px 2px 8px #641609, inset -2px -2px 8px #f6957d;
+.main-btn span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2.25rem;
+  color: #5f1005;
+  text-shadow: -2px -1px 2px #440201;
+  transition: color, text-shadow 0.25s ease-in;
+}
+
+.main-btn:hover span {
+  color: gold;
+  text-shadow: 0 0 4px gold;
 }
 
 main {
+  max-width: 40ch;
   margin: 0 1rem;
 }
 
@@ -150,9 +159,5 @@ h1 {
 @media screen and (min-width: 640px) {
   html {
     font-size: 1rem;
-  }
-
-  main {
-    margin: 0;
   }
 }
