--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ button {
   transform: translate(-50%, -50%);
   font-size: 2.25rem;
   color: #5f1005;
-  text-shadow: -2px -1px 2px #440201;
+  text-shadow: 1px -1px 2px #440201;
   transition: color, text-shadow 0.25s ease-in;
 }
 
@@ -155,6 +155,37 @@ h1 {
   font-size: 2rem;
   color: gold;
   text-shadow: 0 0 0.25rem gold;
+}
+
+#modal > #modal-content #close-modal-btn {
+  position: relative;
+  background: none;
+  border: none;
+  width: 4rem;
+  height: 4rem;
+  margin-top: 2rem;
+  font-size: 2.5rem;
+  cursor: pointer;
+}
+
+#modal > #modal-content #close-modal-btn span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2.25rem;
+  color: #5f1005;
+  text-shadow: 1px -1px 2px #440201;
+  transition: color, text-shadow 0.25s ease-in;
+}
+
+#modal > #modal-content img {
+  max-width: 100%;
+}
+
+#modal > #modal-content #close-modal-btn:hover span {
+  color: gold;
+  text-shadow: 0 0 4px gold;
 }
 
 @media screen and (min-width: 640px) {
