--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   width: 100vw;
   height: 100vh;
   background: url('/assets/images/ChatGPT\ Image\ Mar\ 31\,\ 2025\,\ 10_07_51\ AM.png')
-    center/cover no-repeat;
+    center/contain repeat;
   text-align: center;
   color: #fff;
   box-shadow: inset 0 0 6rem #222;
