Specify that the img tag inside the close modal button should get the styling

--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ h1 {
   transition: color, text-shadow 0.25s ease-in;
 }
 
-#modal > #modal-content img {
+#modal > #modal-content #close-modal-btn img {
   max-width: 100%;
 }
 
