--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ button {
   font-family: inherit;
 }
 
-.main-btn {
+#main-btn {
   position: relative;
   width: 100%;
   border: none;
@@ -44,11 +44,11 @@ button {
   cursor: pointer;
 }
 
-.main-btn img {
+#main-btn img {
   max-width: 100%;
 }
 
-.main-btn span {
+#main-btn span {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -56,12 +56,13 @@ button {
   font-size: 2.25rem;
   color: #5f1005;
   text-shadow: 1px -1px 2px #440201;
-  transition: color, text-shadow 0.25s ease-in;
+  transition: text-shadow, color 1s ease;
 }
 
-.main-btn:hover span {
+#main-btn.valid span {
   color: gold;
-  text-shadow: 0 0 4px gold;
+  text-shadow: 0 0 5px gold, 0 0 10px gold, 0 0 15px gold;
+  transition: color, text-shadow 0.1s ease;
 }
 
 .shadowed-btn {
@@ -164,7 +165,7 @@ h1 {
   margin: 2rem auto;
   font-size: 2rem;
   color: gold;
-  text-shadow: 0 0 0.25rem gold;
+  text-shadow: 0 0 5px gold, 0 0 10px gold, 0 0 15px gold;
 }
 
 #modal > #modal-content #close-modal-btn {
@@ -186,7 +187,7 @@ h1 {
   font-size: 2.25rem;
   color: #5f1005;
   text-shadow: 1px -1px 2px #440201;
-  transition: color, text-shadow 0.25s ease-in;
+  transition: text-shadow, color 0.25s ease;
 }
 
 #modal > #modal-content #close-modal-btn img {
@@ -195,7 +196,8 @@ h1 {
 
 #modal > #modal-content #close-modal-btn:hover span {
   color: gold;
-  text-shadow: 0 0 4px gold;
+  text-shadow: 0 0 5px gold, 0 0 10px gold, 0 0 15px gold;
+  transition: color, text-shadow 0.25s ease;
 }
 
 @media screen and (min-width: 640px) {
