--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ body {
   font-style: normal;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 input,
 button {
   font-family: inherit;
@@ -118,7 +122,21 @@ h1 {
 }
 
 #modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+#modal.visible {
+  display: flex;
+}
+
+#modal .modal-backdrop {
   position: absolute;
   top: 0;
   right: 0;
@@ -127,15 +145,12 @@ h1 {
   background: rgba(34, 34, 34, 0.5);
 }
 
-#modal.visible {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 #modal > #modal-content {
-  display: none;
-  position: absolute;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 70vw;
   height: 75vh;
   max-width: 70ch;
@@ -149,15 +164,12 @@ h1 {
   color: goldenrod;
 }
 
-#modal > #modal-content.visible {
-  display: block;
+#modal > #modal-content.opening {
+  animation: fadeInUp 0.3s ease-out forwards;
 }
 
-#modal > #modal-content > .centered-content {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+#modal > #modal-content.closing {
+  animation: fadeOutDown 0.3s ease-out forwards;
 }
 
 #modal > #modal-content .display-text {
@@ -168,8 +180,15 @@ h1 {
   text-shadow: 0 0 5px gold, 0 0 10px gold, 0 0 15px gold;
 }
 
+#modal > #modal-content #display-text-lvl.display-text {
+  opacity: 0;
+}
+
+#modal > #modal-content #display-text-lvl.display-text.visible {
+  animation: scaleDown 0.05s ease-out forwards;
+}
+
 #modal > #modal-content #close-modal-btn {
-  position: relative;
   background: none;
   border: none;
   width: 4.5rem;
@@ -198,6 +217,40 @@ h1 {
   color: gold;
   text-shadow: 0 0 5px gold, 0 0 10px gold, 0 0 15px gold;
   transition: color, text-shadow 0.25s ease;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeOutDown {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+}
+
+@keyframes scaleDown {
+  from {
+    opacity: 0;
+    transform: scale(1.3);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 @media screen and (min-width: 640px) {
